tests/paczka1/fuzzy1/61376850.err
Error in line 3: o2e A926 78,8
Error in line 5: o2e S996 71,7
Error in line 29: o2e A177 11,6
